--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlternativeToCompare.cs" />
     <Compile Include="Entity\Alternative.cs" />
     <Compile Include="Entity\BaseEntity.cs" />
     <Compile Include="Entity\BaseNamedEntity.cs" />
