--- a/VacationDecision/Presentation.csproj
+++ b/VacationDecision/Presentation.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="CustomControls\EntityDataGrid.cs" />
     <Compile Include="CustomControls\EntityFields\AlternativeFields.xaml.cs">
       <DependentUpon>AlternativeFields.xaml</DependentUpon>
